1.Added lockback for debug perspective 2. Concurrent interaction with remove resolved 3. New flag isRemoved for Wrapper to avoid multiple deletions 4. Partial Test Coverage

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
     </build>
 
     <dependencies>
+        <!-- Loggers -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
+        <!-- TEST -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
